--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<div class="nav-links">
 			<ul>
 				<li><a href="">HOME</a></li>
-				<li><a href="/Petsmart/blob/main/Shop/index.html">STORE</a></li>
+				<li><a href="https://lospaduanos22.github.io/Petsmart/Shop/index.html">STORE</a></li>
 				<li><a href="C:\Users\Jan Carlo\Desktop\CIS\LC\index.html">LEARNING CENTER</a></li>
 				<li><a href="">BLOG</a></li>
 				<li><a href="">ABOUT</a></li>
