--- a/LC/index.html
+++ b/LC/index.html
@@ -15,9 +15,9 @@
 		<div class="nav-links">
 			<ul>
 				<li><a href="">HOME</a></li>
-				<li><a href="">STORE</a></li>
-				<li><a href="">SERVICES</a></li>
-				<li><a href="learningcenter.html">LEARNING CENTER</a></li>
+				<li><a href="https://lospaduanos22.github.io/Petsmart/Shop/index.html">STORE</a></li>
+				<li><a href="https://lospaduanos22.github.io/Petsmart/LC/index.html">LEARNING CENTER</a></li>
+				<li><a href="">BLOG</a></li>
 				<li><a href="">ABOUT</a></li>
 			</ul>
 		</div>
@@ -29,7 +29,7 @@
 	</p>
 	<div class="container">
         <div class="gallery">
-           <a href="C:\Users\Joem\Dropbox\PC\Desktop\CIS\Article\Corgi\pet1.html"> <img src="pet1.jpg" ></a>
+           <a href="https://lospaduanos22.github.io/Petsmart/Article/Corgi/pet1.html"> <img src="pet1.jpg" ></a>
             <div class="desc">Corgi</div>
         </div>
         <div class="gallery">
