--- a/Article/American Short-Hair/pet2.html
+++ b/Article/American Short-Hair/pet2.html
@@ -10,19 +10,17 @@
 </head>
 <body style="background-color:#4F5361;>
 <section class="header">
-	<nav>
-		<a href="index.html"><img src="logo.png"></a>
+<nav>
+		<a href="C:\Users\Jan Carlo\Desktop\CIS\index.html"><img src="logo.png"></a>
 		<div class="nav-links">
 			<ul>
-				<li><a href="">HOME</a></li>
-				<li><a href="">STORE</a></li>
-				<li><a href="">SERVICES</a></li>
-				<li><a href="">BLOG</a></li>
-				<li><a href="">ABOUT</a></li>
+				<li><a href="C:\Users\Jan Carlo\Desktop\CIS\index.html">HOME</a></li>
+				<li><a href="C:\Users\Jan Carlo\Desktop\CIS\Shop\index.html">STORE</a></li>
+				<li><a href="C:\Users\Jan Carlo\Desktop\CIS\LC\index.html">LEARNING CENTER</a></li>
+				<li><a href="C:\Users\Jan Carlo\Desktop\CIS\About\index.html">ABOUT</a></li>
 			</ul>
 		</div>
 	</nav>
-
 
 	
   </div>
@@ -45,12 +43,12 @@
 
     <div class="w3-col m6 w3-padding-large">
       <h1 class="w3-center" style="font-size: 62px;">American Shorthair </h1><br>
-      <h5 class="w3-center">friendly / playful / accepting of other pets and people,</h5>
+      <h5 class="w3-center">friendly / playful / accepting of other pets and people</h5>
       <p class="w3-large" style="margin: 10px 0 40px;
 	font-size:14px;
 	color: #fff;">The American Shorthair is a medium-sized cat, but she is a very powerful one. She is heavily muscled and has heavy boning. Her rounded, thick appearance makes you realize that she will be heavy when you pick her up.
 
-The American Shorthair is a powerful cat. All components of this cat should be well developed. She has a broad chest, a muscular neck, strong jaws and a well-developed muzzle. Her legs are thick and strong. She looks like what she was originally meant to be, a cat to keep rodents out of the barn and the house.  <span class="w3-tag w3-light-grey">seasonal</span> ingredients.</p>
+The American Shorthair is a powerful cat. All components of this cat should be well developed. She has a broad chest, a muscular neck, strong jaws and a well-developed muzzle. Her legs are thick and strong. She looks like what she was originally meant to be, a cat to keep rodents out of the barn and the house.  </p>
       <p class="w3-large w3-text-grey w3-hide-medium" style="margin: 10px 0 40px;
 	font-size:14px;
 	color: #fff;">
