--- a/Article/Betta/pet4.html
+++ b/Article/Betta/pet4.html
@@ -11,18 +11,16 @@
 <body style="background-color:#4F5361;>
 <section class="header">
 	<nav>
-		<a href="index.html"><img src="logo.png"></a>
+		<a href="C:\Users\Jan Carlo\Desktop\CIS\index.html"><img src="logo.png"></a>
 		<div class="nav-links">
 			<ul>
-				<li><a href="">HOME</a></li>
-				<li><a href="">STORE</a></li>
-				<li><a href="">SERVICES</a></li>
-				<li><a href="">BLOG</a></li>
-				<li><a href="">ABOUT</a></li>
+				<li><a href="C:\Users\Jan Carlo\Desktop\CIS\index.html">HOME</a></li>
+				<li><a href="C:\Users\Jan Carlo\Desktop\CIS\Shop\index.html">STORE</a></li>
+				<li><a href="C:\Users\Jan Carlo\Desktop\CIS\LC\index.html">LEARNING CENTER</a></li>
+				<li><a href="C:\Users\Jan Carlo\Desktop\CIS\About\index.html">ABOUT</a></li>
 			</ul>
 		</div>
 	</nav>
-
 
 	
   </div>
@@ -50,7 +48,7 @@
 	font-size:14px;
 	color: #fff;">Betta fish are native to Asia, where they live in the shallow water of marshes, ponds, or slow-moving streams. Male bettas are devoted fathers who build bubble nests for their young with their mouths and fiercely protect their babies from predators. Just like us, betta fish are diurnal. That means they’re active during the day and sleep at night, requiring darkness to get a good night’s rest.
 
- <span class="w3-tag w3-light-grey">seasonal</span> ingredients.</p>
+</p>
       <p class="w3-large w3-text-grey w3-hide-medium" style="margin: 10px 0 40px;
 	font-size:14px;
 	color: #fff;">
