--- a/Article/Cat1/cat1.html
+++ b/Article/Cat1/cat1.html
@@ -3,14 +3,14 @@
 <head>
 	<meta name="viewport" content="with=device-width, initial-scake=1.0">
 		<title>PetSmart</title>
-		<link rel="stylesheet" href="pet5.css">
+		<link rel="stylesheet" href="cat1.css">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?		family=Poppins:wght@100;200;300;400;600;700&display=swap" rel="stylesheet"> 
 </head>
 <body style="background-color:#4F5361;>
 <section class="header">
-<nav>
+	<nav>
 		<a href="C:\Users\Jan Carlo\Desktop\CIS\index.html"><img src="logo.png"></a>
 		<div class="nav-links">
 			<ul>
@@ -21,7 +21,6 @@
 			</ul>
 		</div>
 	</nav>
-
 
 	
   </div>
@@ -39,20 +38,21 @@
   <!-- About Section -->
   <div class="w3-row w3-padding-64" id="about" style="margin: auto;  width: 90%;  padding: 20px; margin-left:12%; margin-top:30%;">
     <div class="w3-col m6 w3-padding-large w3-hide-small">
-     <img src="pet5.png" class="w3-round w3-image w3-opacity-min" alt="Table Setting" width="300" height="300">
+     <img src="petcare1.jpg" class="w3-round w3-image w3-opacity-min" alt="Table Setting" width="300" height="300">
     </div>
 
     <div class="w3-col m6 w3-padding-large">
-      <h1 class="w3-center" style="font-size: 62px;">Golden Hamster </h1><br>
-      <h5 class="w3-center">shy and reserved / mild temperament with humans  </h5>
+      <h1 class="w3-center" style="font-size: 40px;">Why Your Cat Likes to Hide in Small Dark Spaces </h1><br>
+      <h3 class="w3-center">Cat Care</h3>
       <p class="w3-large" style="margin: 10px 0 40px;
 	font-size:14px;
-	color: #fff;">Like other hamsters, it has a stout body with short, stocky legs and short, wide feet with small, sharp claws. The head has small, furry ears and huge internal cheek pouches that open inside the lips and extend to behind the shoulders. The tail is stubby and can be either white or pink.
-</p>
+	color: #fff;">Why Do Cats Hide?
+Although they're domesticated, your cat's ancestors sought secluded spaces to birth their kittens and seek shelter from predators, according to Feline Behavior Solutions. That's likely why your cat gravitates toward the unassuming cardboard box left over from your latest online purchase. There may be times when your fur baby hides because they're stressed out, says ASPCAPro. Usually, though, they're just relaxing in a space that feels secure. Here are some of the most common hiding spots and why cats love them.</p>
       <p class="w3-large w3-text-grey w3-hide-medium" style="margin: 10px 0 40px;
 	font-size:14px;
 	color: #fff;">
-	Golden hamsters are small rodents, usually weighing more than 100 grams (about 3.5 ounces) and having a body length up to 18 cm (7.1 inches); females are usually larger than males. In wild populations and in animals designated “normal variety” by breeders, the short fur is dense and very soft, with golden brown upperparts and white or cream underparts extending up onto the body behind the head. More than 120 varieties have been bred for particular coat types. The result is a bewildering range of fur colours, patterns, and texture combinations.</p>
+	In a Box,
+The most common escape is your average cardboard box — be it a shoebox or a case of soda. Boxes provide a soothing space for your feline friend. For many cats, the smaller, the better. In addition to the warmth that cardboard insulation generates, a box's four walls give cats the security and comfort they crave. Additionally, they can spy on you — and anyone else who invades their territory — by peeking over the sides. Strategically placing different-sized boxes around the house will amp up your feline friend's playtime, too. Boxes also provide a place where your cat can scratch freely without damaging anything of value.</p>
     </div>
   </div>
 </section>
