--- a/Article/Corgi/pet1.html
+++ b/Article/Corgi/pet1.html
@@ -10,19 +10,17 @@
 </head>
 <body style="background-color:#4F5361;>
 <section class="header">
-	<nav>
-		<a href="index.html"><img src="logo.png"></a>
+<nav>
+		<a href="C:\Users\Jan Carlo\Desktop\CIS\index.html"><img src="logo.png"></a>
 		<div class="nav-links">
 			<ul>
-				<li><a href="">HOME</a></li>
-				<li><a href="">STORE</a></li>
-				<li><a href="">SERVICES</a></li>
-				<li><a href="">BLOG</a></li>
-				<li><a href="">ABOUT</a></li>
+				<li><a href="C:\Users\Jan Carlo\Desktop\CIS\index.html">HOME</a></li>
+				<li><a href="C:\Users\Jan Carlo\Desktop\CIS\Shop\index.html">STORE</a></li>
+				<li><a href="C:\Users\Jan Carlo\Desktop\CIS\LC\index.html">LEARNING CENTER</a></li>
+				<li><a href="C:\Users\Jan Carlo\Desktop\CIS\About\index.html">ABOUT</a></li>
 			</ul>
 		</div>
 	</nav>
-
 
 	
   </div>
@@ -48,7 +46,7 @@
       <h5 class="w3-center">alert / affectionate / smart</h5>
       <p class="w3-large" style="margin: 10px 0 40px;
 	font-size:14px;
-	color: #fff;">Among the most agreeable of all small housedogs, the Pembroke Welsh Corgi is a strong, athletic, and lively little herder who is affectionate and companionable without being needy. They are one the world's most popular herding breeds. At 10 to 12 inches at the shoulder and 27 to 30 pounds, a well-built male Pembroke presents a big dog in a small package. Short but powerful legs, muscular thighs, and a deep chest equip him for a hard day's work. Built long and low, Pembrokes are surprisingly quick and agile. They can be red, sable, fawn, and black and tan, with or without white markings.  <span class="w3-tag w3-light-grey">seasonal</span> ingredients.</p>
+	color: #fff;">Among the most agreeable of all small housedogs, the Pembroke Welsh Corgi is a strong, athletic, and lively little herder who is affectionate and companionable without being needy. They are one the world's most popular herding breeds. At 10 to 12 inches at the shoulder and 27 to 30 pounds, a well-built male Pembroke presents a big dog in a small package. Short but powerful legs, muscular thighs, and a deep chest equip him for a hard day's work. Built long and low, Pembrokes are surprisingly quick and agile. They can be red, sable, fawn, and black and tan, with or without white markings.  </p>
       <p class="w3-large w3-text-grey w3-hide-medium" style="margin: 10px 0 40px;
 	font-size:14px;
 	color: #fff;">The Pembroke is a bright, sensitive dog who enjoys play with his human family and responds well to training. As herders bred to move cattle, they are fearless and independent. They are vigilant watchdogs, with acute senses and a 'big dog' bark. Families who can meet their bold but kindly Pembroke's need for activity and togetherness will never have a more loyal, loving pet.</p>
