--- a/Article/Dog1/dog1.html
+++ b/Article/Dog1/dog1.html
@@ -3,7 +3,7 @@
 <head>
 	<meta name="viewport" content="with=device-width, initial-scake=1.0">
 		<title>PetSmart</title>
-		<link rel="stylesheet" href="pet5.css">
+		<link rel="stylesheet" href="dog1.css">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?		family=Poppins:wght@100;200;300;400;600;700&display=swap" rel="stylesheet"> 
@@ -22,8 +22,6 @@
 		</div>
 	</nav>
 
-
-	
   </div>
 </section>
 
@@ -39,20 +37,23 @@
   <!-- About Section -->
   <div class="w3-row w3-padding-64" id="about" style="margin: auto;  width: 90%;  padding: 20px; margin-left:12%; margin-top:30%;">
     <div class="w3-col m6 w3-padding-large w3-hide-small">
-     <img src="pet5.png" class="w3-round w3-image w3-opacity-min" alt="Table Setting" width="300" height="300">
+     <img src="petcare3.jpg" class="w3-round w3-image w3-opacity-min" alt="Table Setting" width="300" height="300">
     </div>
 
     <div class="w3-col m6 w3-padding-large">
-      <h1 class="w3-center" style="font-size: 62px;">Golden Hamster </h1><br>
-      <h5 class="w3-center">shy and reserved / mild temperament with humans  </h5>
+      <h1 class="w3-center" style="font-size: 40px;">Why Does My Dog Sigh?
+ </h1><br>
+      <h3 class="w3-center">Dog Care</h3>
       <p class="w3-large" style="margin: 10px 0 40px;
 	font-size:14px;
-	color: #fff;">Like other hamsters, it has a stout body with short, stocky legs and short, wide feet with small, sharp claws. The head has small, furry ears and huge internal cheek pouches that open inside the lips and extend to behind the shoulders. The tail is stubby and can be either white or pink.
-</p>
+	color: #fff;">What Is Sighing?
+Sighing is a natural bodily function common to humans and other animals. Wondering what sets a sigh apart from a normal breath? Well, most breaths are so quiet they don't immediately register as audible. A sigh is a long breath in and out that differentiates itself by being louder.
+
+Popular Science defines sighing as "a deep long breath about twice the volume of a typical breath." They continue, "It also serves as a sort of stretch for your lungs — a periodic deep breath inflates the alveoli, tiny sacs in the lungs where oxygen and carbon dioxide pass in and out of the blood."</p>
       <p class="w3-large w3-text-grey w3-hide-medium" style="margin: 10px 0 40px;
 	font-size:14px;
 	color: #fff;">
-	Golden hamsters are small rodents, usually weighing more than 100 grams (about 3.5 ounces) and having a body length up to 18 cm (7.1 inches); females are usually larger than males. In wild populations and in animals designated “normal variety” by breeders, the short fur is dense and very soft, with golden brown upperparts and white or cream underparts extending up onto the body behind the head. More than 120 varieties have been bred for particular coat types. The result is a bewildering range of fur colours, patterns, and texture combinations.</p>
+In 2013, a study from the journal Physiology & Behavior was widely misrepresented as proof that petting cats stresses them out. John Bradshaw, director of the Anthrozoology Institute at the University of Bristol, England reassures National Geographic that it was something in the cats' lives and not the act of petting that contributed to the animals' anxiety. (The experiment actually looked at how cats that live alone experience stress differently from those in multi-cat households.) Petting can comfort your kitty, so go ahead and snuggle up.</p>
     </div>
   </div>
 </section>
