--- a/Article/ShihZu/pet6.html
+++ b/Article/ShihZu/pet6.html
@@ -10,19 +10,17 @@
 </head>
 <body style="background-color:#4F5361;>
 <section class="header">
-	<nav>
-		<a href="index.html"><img src="logo.png"></a>
+<nav>
+		<a href="C:\Users\Jan Carlo\Desktop\CIS\index.html"><img src="logo.png"></a>
 		<div class="nav-links">
 			<ul>
-				<li><a href="">HOME</a></li>
-				<li><a href="">STORE</a></li>
-				<li><a href="">SERVICES</a></li>
-				<li><a href="">BLOG</a></li>
-				<li><a href="">ABOUT</a></li>
+				<li><a href="C:\Users\Jan Carlo\Desktop\CIS\index.html">HOME</a></li>
+				<li><a href="C:\Users\Jan Carlo\Desktop\CIS\Shop\index.html">STORE</a></li>
+				<li><a href="C:\Users\Jan Carlo\Desktop\CIS\LC\index.html">LEARNING CENTER</a></li>
+				<li><a href="C:\Users\Jan Carlo\Desktop\CIS\About\index.html">ABOUT</a></li>
 			</ul>
 		</div>
 	</nav>
-
 
 	
   </div>
@@ -48,7 +46,7 @@
       <h5 class="w3-center">playful / affectionate / outgoing</h5>
       <p class="w3-large" style="margin: 10px 0 40px;
 	font-size:14px;
-	color: #fff;">That face! Those big dark eyes looking up at you with that sweet expression! It's no surprise that Shih Tzu owners have been so delighted with this little 'Lion Dog' for a thousand years. Where Shih Tzu go, giggles and mischief follow. Shi Tsu (pronounced in the West 'sheed-zoo' or 'sheet-su'; the Chinese say 'sher-zer'), weighing between 9 to 16 pounds, and standing between 8 and 11 inches, are surprisingly solid for dogs their size. The coat, which comes in many colors, is worth the time you will put into it'¿few dogs are as beautiful as a well-groomed Shih Tzu. Being cute is a way of life for this lively charmer.  <span class="w3-tag w3-light-grey">seasonal</span> ingredients.</p>
+	color: #fff;">That face! Those big dark eyes looking up at you with that sweet expression! It's no surprise that Shih Tzu owners have been so delighted with this little 'Lion Dog' for a thousand years. Where Shih Tzu go, giggles and mischief follow. Shi Tsu (pronounced in the West 'sheed-zoo' or 'sheet-su'; the Chinese say 'sher-zer'), weighing between 9 to 16 pounds, and standing between 8 and 11 inches, are surprisingly solid for dogs their size. The coat, which comes in many colors, is worth the time you will put into it'¿few dogs are as beautiful as a well-groomed Shih Tzu. Being cute is a way of life for this lively charmer.  .</p>
       <p class="w3-large w3-text-grey w3-hide-medium" style="margin: 10px 0 40px;
 	font-size:14px;
 	color: #fff;">The Shih Tzu is known to be especially affectionate with children. As a small dog bred to spend most of their day inside royal palaces, they make a great pet if you live in an apartment or lack a big backyard. Some dogs live to dig holes and chase cats, but a Shih Tzu's idea of fun is sitting in your lap acting adorable as you try to watch TV.</p>
