--- a/index.html
+++ b/index.html
@@ -10,15 +10,14 @@
 </head>
 <body>
 <section class="header">
-	<nav>
-		<a href="index.html"><img src="logo.png"></a>
+<nav>
+		<a href="C:\Users\Jan Carlo\Desktop\CIS\index.html"><img src="logo.png"></a>
 		<div class="nav-links">
 			<ul>
-				<li><a href="">HOME</a></li>
-				<li><a href="https://lospaduanos22.github.io/Petsmart/Shop/index.html">STORE</a></li>
-				<li><a href="https://lospaduanos22.github.io/Petsmart/LC/index.html">LEARNING CENTER</a></li>
-				<li><a href="">BLOG</a></li>
-				<li><a href="">ABOUT</a></li>
+				<li><a href="C:\Users\Jan Carlo\Desktop\CIS\index.html">HOME</a></li>
+				<li><a href="C:\Users\Jan Carlo\Desktop\CIS\Shop\index.html">STORE</a></li>
+				<li><a href="C:\Users\Jan Carlo\Desktop\CIS\LC\index.html">LEARNING CENTER</a></li>
+				<li><a href="C:\Users\Jan Carlo\Desktop\CIS\About\index.html">ABOUT</a></li>
 			</ul>
 		</div>
 	</nav>
@@ -27,7 +26,7 @@
 	<h1>PetSmart</h1>
 	<p>One-Stop Shop for Pet Supplies and Services
 	</p>
-	<a href="C:\Users\Jan Carlo\Desktop\CIS\Shop" class="hero-btn">Visit the Store</a>
+	<a href="C:\Users\Jan Carlo\Desktop\CIS\Shop\index.html" class="hero-btn">Visit the Store</a>
 </div>
 </section>
 </body>
