--- a/Article/Rosellas/pet3.html
+++ b/Article/Rosellas/pet3.html
@@ -10,15 +10,14 @@
 </head>
 <body style="background-color:#4F5361;>
 <section class="header">
-	<nav>
-		<a href="index.html"><img src="logo.png"></a>
+<nav>
+		<a href="C:\Users\Jan Carlo\Desktop\CIS\index.html"><img src="logo.png"></a>
 		<div class="nav-links">
 			<ul>
-				<li><a href="">HOME</a></li>
-				<li><a href="">STORE</a></li>
-				<li><a href="">SERVICES</a></li>
-				<li><a href="">BLOG</a></li>
-				<li><a href="">ABOUT</a></li>
+				<li><a href="C:\Users\Jan Carlo\Desktop\CIS\index.html">HOME</a></li>
+				<li><a href="C:\Users\Jan Carlo\Desktop\CIS\Shop\index.html">STORE</a></li>
+				<li><a href="C:\Users\Jan Carlo\Desktop\CIS\LC\index.html">LEARNING CENTER</a></li>
+				<li><a href="C:\Users\Jan Carlo\Desktop\CIS\About\index.html">ABOUT</a></li>
 			</ul>
 		</div>
 	</nav>
@@ -51,7 +50,7 @@
 	color: #fff;">Crimson rosellas grow to 14 inches long with males being about 15% larger than females.
 They are usually known for their bright red feathers but there are 7 subspecies that come in hues of orange or yellow. All subspecies have blue cheeks, wings, and tail, with splashes of red throughout its feathers.
 
- <span class="w3-tag w3-light-grey">seasonal</span> ingredients.</p>
+ </p>
       <p class="w3-large w3-text-grey w3-hide-medium" style="margin: 10px 0 40px;
 	font-size:14px;
 	color: #fff;">
