--- a/Shop/index.html
+++ b/Shop/index.html
@@ -28,7 +28,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#"><strong>Pet</strong>Smart</a>
+        <a href="C:\Users\Jan Carlo\Desktop\CIS\index.html"><img src="logo.png" style="width:180px;"></a>
 
             </div>
 
