--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 		<a href="C:\Users\Jan Carlo\Desktop\CIS\index.html"><img src="logo.png"></a>
 		<div class="nav-links">
 			<ul>
-				<li><a href="C:\Users\Jan Carlo\Desktop\CIS\index.html">HOME</a></li>
-				<li><a href="C:\Users\Jan Carlo\Desktop\CIS\Shop\index.html">STORE</a></li>
-				<li><a href="C:\Users\Jan Carlo\Desktop\CIS\LC\index.html">LEARNING CENTER</a></li>
-				<li><a href="C:\Users\Jan Carlo\Desktop\CIS\About\index.html">ABOUT</a></li>
+				<li><a href="https://lospaduanos22.github.io/Petsmart/index.html">HOME</a></li>
+				<li><a href="https://lospaduanos22.github.io/Petsmart/Shop/index.html">STORE</a></li>
+				<li><a href="https://lospaduanos22.github.io/Petsmart/LC/index.html">LEARNING CENTER</a></li>
+				<li><a href="https://lospaduanos22.github.io/Petsmart/About/index.html">ABOUT</a></li>
 			</ul>
 		</div>
 	</nav>
@@ -26,7 +26,7 @@
 	<h1>PetSmart</h1>
 	<p>One-Stop Shop for Pet Supplies and Services
 	</p>
-	<a href="C:\Users\Jan Carlo\Desktop\CIS\Shop\index.html" class="hero-btn">Visit the Store</a>
+	<a href="https://lospaduanos22.github.io/Petsmart/Shop/index.html" class="hero-btn">Visit the Store</a>
 </div>
 </section>
 </body>
